<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_acid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.njzjz.chemicaltools.AcidActivity">
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/acidText_pK"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.06"
            android:maxLines="1"
            android:hint="@string/acidpK_name"
            android:layout_toRightOf="@+id/switchAB"
            android:layout_toEndOf="@+id/switchAB" />

        <Switch

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchAB"
            android:textOff="@string/acid_name"
            android:textOn="@string/base_name"
            android:showText="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:allowUndo="false"
            android:autoText="false" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        >

        <Button
            android:layout_height="wrap_content"
            android:text="@string/massButton_name"
            android:id="@+id/acidButton"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="80dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/acidText_c"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.06"
            android:maxLines="1"
            android:hint="@string/acidc_name"
            android:layout_toLeftOf="@+id/acidButton"
            android:layout_toStartOf="@+id/acidButton" />

    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/acidTextview"
        android:layout_weight="0.06"
        android:text="@string/examTextview_name"
        android:textSize="25dp"
        android:textColor="@color/abc_primary_text_material_light"
        android:scrollbars="vertical"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/relativeLayout2"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
