<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.njzjz.chemicaltools.MassActivity">
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:layout_height="wrap_content"
            android:text="@string/massButton_name"
            android:id="@+id/massButton"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="80dp" />

        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/massText"
        android:imeOptions="actionSend"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
            android:maxLines="1"
        android:hint="@string/massEditText_name"
            android:layout_toLeftOf="@+id/massButton"
            android:layout_toStartOf="@+id/massButton" />

    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/massTextview"
        android:layout_weight="0.06"
        android:text="@string/massTextview_name"
        android:textSize="18dp"
        android:textColor="@color/abc_primary_text_material_light"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:scrollbars="vertical"
        />

</RelativeLayout>