<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_exam"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.njzjz.chemicaltools.ExamActivity">

    <Button
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:text="@string/examButton_name"
        android:id="@+id/examButton"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/examTextviewTop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/examText"
        android:imeOptions="actionSend"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
        android:maxLines="1"
        android:hint="@string/examEditText_name"
        android:layout_below="@+id/examTextviewTop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/examTextview"
        android:layout_weight="0.06"
        android:text="@string/examTextview_name"
        android:textSize="25dp"
        android:textColor="@color/abc_primary_text_material_light"
        android:scrollbars="vertical"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/examButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/examTextviewTop"
        android:layout_weight="0.06"
        android:text="H"
        android:textSize="50dp"
        android:textColor="@color/abc_primary_text_material_light"
        android:scrollbars="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/examScoreTextview"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
